# plutus-playground

./: README.md  System Architecture Diagram.md
Phases/: Software dev cycle.md
dev Requirements/: Architecture diagram.md  Software description.md
docs/: readme.md
job2/: .env.example  docker-compose.yml  package.json  readme.md  remix_patch.sh
job2/.backup_remixlike_20260228_110750/apps/php-api/public/: index.php
job2/.backup_remixlike_20260228_110750/apps/php-api/src/: Workspace.php  routes.php
job2/.backup_remixlike_20260228_110750/apps/shell-frontend/src/: app.tsx  styles.css
job2/.pnpm-store/v3/files/30/: 47b751ea043585455f3a17116b2f72983a66f96b14d94e43b10eb2f848dc27c05f0ccf7cef10c2ec5de349dea6c60aab2c954274dd11fbfaf2af75c8b70aad-index.json
job2/.pnpm-store/v3/files/81/: 4bbd8707d6bef1030419a0b40a30402a23c19989e6670b9f76ae7de0ac8ad8a3b37f9fd8db2b3ed94058847a38f8aa96397de8654251b2ded07caa22955aa0-index.json
job2/.pnpm-store/v3/files/a3/: 96bdc4a8dbb6e858e818b94b7f87bdb444466a2e69b59bc947295d7500d6ef863542a844e8bd6f2389f0cd271db1d81e46080a2325ab1920d4a9189a6db94b-index.json
job2/.pnpm-store/v3/files/cf/: d557a42ecc5ab85f5a2a62b6335d8026aea0c2d174820b42c00457e65eb08cc1abfa149719349b702966e3050977674b853b2ab23e977591504190f0ad502b-index.json
job2/apps/compiler-worker/: Dockerfile  worker.sh
job2/apps/haskell-api/: Dockerfile  cardano-ide-api.cabal
job2/apps/haskell-api/plutus-template/: cabal.project
job2/apps/haskell-api/plutus-template/Utilities/: utilities.cabal
job2/apps/haskell-api/plutus-template/Utilities/src/: Utilities.hs
job2/apps/haskell-api/plutus-template/wspace/: wspace.cabal
job2/apps/haskell-api/plutus-template/wspace/app/: main.hs
job2/apps/haskell-api/scripts/: compile-plutus-main.sh  compile-plutus.sh
job2/apps/haskell-api/src/: Compile.hs  Database.hs  Jobs.hs  Main.hs  SafePath.hs  Schema.hs  Types.hs  Workspace.hs  WorkspaceImport.hs
job2/apps/php-api/: Dockerfile  composer.json
job2/apps/php-api/public/: index.php
job2/apps/php-api/src/: Jobs.php  Workspace.php  bootstrap.php  routes.php  workspaceImport.php
job2/apps/shell-frontend/: Dockerfile  index.html  package.json
job2/apps/shell-frontend/src/: app.tsx  main.tsx  styles.css  types.ts
job2/apps/shell-frontend/src/components/commands/: CommandPalette.tsx
job2/apps/shell-frontend/src/components/editor/: EditorTabs.tsx
job2/apps/shell-frontend/src/components/explorer/: ExplorerIcons.tsx  ExplorerTree.tsx
job2/apps/shell-frontend/src/components/home/: HomePage.tsx  LanguageSetupPage.tsx
job2/apps/shell-frontend/src/components/terminal/: BottomViews.tsx
job2/apps/shell-frontend/src/core/: api.ts  host.ts  pluginRuntime.ts
job2/apps/shell-frontend/src/docs/: catalog.ts  docsIndex.ts  search.ts  searchDocs.ts
job2/apps/shell-frontend/src/server/: cloneRoute.js
job2/apps/shell-frontend/src/state/: store.ts
job2/apps/shell-frontend/src/templates/: cardanoTemplates.ts  languageStarterRegistry.ts
job2/apps/shell-frontend/src/ui/: MonacoEditor.tsx  Terminal.tsx
job2/apps/shell-frontend/src/utils/: fuzzy.ts
job2/apps/shell-frontend/src/workspace/: folderPicker.ts  gist.ts  httpImport.ts  importers.ts  ipfsImport.ts  localFs.ts
job2/data/workspaces/demo/aiken-starter/: README.md
job2/data/workspaces/demo/aiken-starter/offchain/: package.json
job2/data/workspaces/demo/aiken-starter/onchain/: aiken.toml
job2/data/workspaces/demo/haskell-starter/: README.md
job2/data/workspaces/demo/haskell-starter/frontend/: package.json
job2/data/workspaces/demo/haskell-starter/offchain/: package.json
job2/data/workspaces/demo/haskell-starter/onchain/: haskell-starter-onchain.cabal
job2/data/workspaces/demo/haskell-starter/onchain/app/: export-policy.hs  export-validator.hs
job2/data/workspaces/demo/haskell-starter/onchain/src/: Contract.hs
job2/data/workspaces/demo/haskell-starter/onchain/test/: Spec.hs
job2/data/workspaces/demo/helios-starter/: README.md
job2/data/workspaces/demo/helios-starter/offchain/: package.json
job2/data/workspaces/demo/midnight-starter/: README.md
job2/data/workspaces/demo/midnight-starter/offchain/: package.json
job2/data/workspaces/demo/minting-policy/: README.md  minting-policy.cabal
job2/data/workspaces/demo/minting-policy/app/: export-policy.hs
job2/data/workspaces/demo/minting-policy/src/: MintingPolicy.hs
job2/data/workspaces/demo/opshin-starter/: README.md
job2/data/workspaces/demo/opshin-starter/offchain/: package.json
job2/data/workspaces/demo/plutus-starter/: README.md  plutus-starter.cabal
job2/data/workspaces/demo/plutus-starter/app/: export-policy.hs  export-validator.hs
job2/data/workspaces/demo/plutus-starter/src/: Validator.hs
job2/data/workspaces/demo/validator-script/: README.md  validator-script.cabal
job2/data/workspaces/demo/validator-script/app/: export-validator.hs
job2/data/workspaces/demo/validator-script/src/: ScriptValidator.hs
job2/data/workspaces/saviour-ide/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NIX SETUP.md  README.md  REPLTutorial.md  Tutorials.md  cardano-node-cli-setup.md
job2/data/workspaces/saviour-ide/code/: cabal.project
job2/data/workspaces/saviour-ide/code/wspace/: ada_lending.plutus  amm.cbor  amm.plutus  auction.plutus  circle.cbor  circle.plutus  collaterize.cbor  dao_treasury.cbor  dao_treasury.plutus  document_policy.cbor  escrow.cbor  insurance.cbor  insurance.plutus  insurance_mint_policy.cbor  lending_pool.cbor  (+38 more)
job2/data/workspaces/saviour-ide/coxy-plutus-builder/: coxy-industries.js  coxy-plutus-builder-tutorial.html  coxy-plutus-builder-tutorial.md  coxy-plutus.css  coxy-plutus.js  index.html
job2/data/workspaces/saviour-ide/plutus-starter-kit/: .gitignore  LICENSE  Tutorial.html  Tutorial.md
job2/data/workspaces/saviour-ide/plutus-starter-kit/src/: Utilities.hs  ValidatorLogic.hs  cabal.project  src.cabal
job2/data/workspaces/saviour-ide/plutus-starter-kit/src/app/: Main.hs
job2/data/workspaces/saviour-ide/plutus-starter-kit/src/tests/: Main.hs  ValidatorLogicFormalSpec.hs  ValidatorLogicSpec.hs
(+146 files in other folders)
