cabal-version:      2.4
name:               cardano-ide-api
version:            0.1.0.0
build-type:         Simple

executable cardano-ide-api
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

  other-modules:
      Database
    , Jobs
    , SafePath
    , Schema
    , Types
    , Workspace
    , WorkspaceImport

  build-depends:
      base
    , aeson
    , bytestring
    , case-insensitive
    , containers
    , directory
    , filepath
    , hedis
    , http-types
    , network
    , process
    , raw-strings-qq
    , random
    , text
    , time
    , transformers
    , unordered-containers
    , wai
    , wai-cors
    , wai-extra
    , warp