cabal-version:      3.4
name:               wspace
version:            0.1.2.6
author:             IOG's education team, Bernard Sibanda
maintainer:         education@iohk.io, cto@wims.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:
        base ^>=4.14.3.0,
        aeson,
        bytestring,
        containers,
        cardano-api,
        data-default,
        plutus-ledger-api,
        cardano-ledger-core,
        plutus-tx-plugin,
        plutus-tx,
        base16-bytestring,
        text,
        serialise,
        utilities,
        cardano-ledger-shelley,
        bech32 >=1.1 && <2.0,
        time,
        template-haskell
    default-language: Haskell2010
    ghc-options:
        -Wno-unused-packages
        -fobject-code
        -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas
        -fno-strictness
        -fno-spec-constr
        -fno-specialise
        -fexpose-all-unfoldings
        -fplugin-opt PlutusTx.Plugin:defer-errors

executable contract-exe
    import:            common-all
    main-is:           Main.hs
    hs-source-dirs:    app
    build-depends:
        base >=4.14 && <5
    default-language:  Haskell2010